welcome.lessons.welcome.variables.Variables.scala.error
Variables:-6: error: Unmatched closing brace '}' ignored here
	}
        ^Variables:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Variables:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^