welcome.lessons.welcome.variables.Variables.scala.code
var x:Int = 0
while (estSurBiscuit==false){
	avance}
}
